vlib/v/parser/tests/structured_generic_receiver_array_init_syntax_err.vv
struct ReceiverPatternExpect[T] {}
fn (e ReceiverPatternExpect[[]T{}]) item(value T) T {
	return value
}

fn main() {}
